@startuml

title __CONTROLLER's Class Diagram__\n

  package  {
    package ui.controller {
      abstract class BaseFrameController {
          ~ frame : JFrame
          + show()
          + hide()
      }
    }
  }
  

  package  {
    package ui.controller {
      class BookingCheckoutController {
          - BookingCheckoutTable : JTable
          - MainMenuButton : JButton
          - ConfirmBookingButton : JButton
          + BookingCheckoutController()
          - initComponents()
          - initListeners()
      }
    }
  }
  

  package  {
    package ui.controller {
      class FlightSearchFrameController {
          - departureComboBox : JComboBox
          - destinationComboBox : JComboBox
          - departureDateField : JTextField
          - costRadioButton : JRadioButton
          - timeRadioButton : JRadioButton
          - backButton : JButton
          - searchFlightsButton : JButton
          + FlightSearchFrameController()
          - initComponents()
          - initListeners()
          + propertyChange()
          - setModelDetails()
      }
    }
  }
  

  package  {
    package ui.controller {
      class SearchFlightButtonListener {
          + actionPerformed()
      }
    }
  }
  

  package  {
    package ui.controller {
      class FlightSearchResultsController {
          - flightSearchResultsTable : JTable
          - bookFlightButton : JButton
          - bookHotelButton : JButton
          - mainMenuButton : JButton
          - routes : ArrayList<Route>
          + FlightSearchResultsController()
          - initialiseComposite()
          - initComponents()
          - initListeners()
      }
    }
  }
  

  package  {
    package ui.controller {
      class HotelSearchResultsController {
          - routes : ArrayList<Route>
          - hotelTable : JTable
          - cancelButton : JButton
          - bookHotelButton : JButton
          + HotelSearchResultsController()
          - initialiseComposite()
          - initComponents()
          - initListeners()
      }
    }
  }
  

  package  {
    package ui.controller {
      class LoginFrameController {
          - loginButton : JButton
          - backButton : JButton
          - usernameField : JTextField
          - passwordField : JPasswordField
          - errorLabel : JLabel
          + LoginFrameController()
          - initComponents()
          - initListeners()
      }
    }
  }
  

  package  {
    package ui.controller {
      class LoginButtonListener {
          + actionPerformed()
      }
    }
  }
  

  package  {
    package ui.controller {
      class MainMenuFrameController {
          - bookFlightsButton : JButton
          - cancelFlightsButton : JButton
          - orderHistoryButton : JButton
          - logoutButton : JButton
          - usernameLabel : JLabel
          - availablePointsLabel : JLabel
          - accountControlButton : JButton
          + MainMenuFrameController()
          - initComponents()
          - initListeners()
      }
    }
  }
  

  package  {
    package ui.controller {
      class RegisterFrameController {
          - usernameField : JTextField
          - emailField : JTextField
          - passwordField1 : JPasswordField
          - passwordField2 : JPasswordField
          - signUpButton : JButton
          - backButton : JButton
          - errorLabel : JLabel
          + RegisterFrameController()
          - initComponents()
          - initListeners()
          + restore()
          + createMemento()
      }
    }
  }
  

  package  {
    package ui.controller {
      class SignUpButtonListener {
          + actionPerformed()
      }
    }
  }
  

  package  {
    package ui.controller {
      interface ViewController {
          {abstract} + show()
          {abstract} + hide()
      }
    }
  }
  

  package  {
    package ui.controller {
      class WelcomeFrameController {
          - loginButton : JButton
          - registerButton : JButton
          + WelcomeFrameController()
          - initComponents()
          - initListeners()
      }
    }
  }
  

  BaseFrameController -up-|> ViewController
  BookingCheckoutController -up-|> BaseFrameController
  BookingCheckoutController o-- IMainMenuCoordinator : coordinator
  BookingCheckoutController o-- Booking : reservations
  FlightSearchFrameController -up-|> PropertyChangeListener
  FlightSearchFrameController -up-|> BaseFrameController
  FlightSearchFrameController o-- IMainMenuCoordinator : coordinator
  FlightSearchFrameController o-- FlightSearchModel : model
  FlightSearchFrameController +-down- SearchFlightButtonListener
  SearchFlightButtonListener -up-|> ActionListener
  FlightSearchResultsController -up-|> BaseFrameController
  FlightSearchResultsController o-- Booking : reservations
  FlightSearchResultsController o-- IMainMenuCoordinator : coordinator
  HotelSearchResultsController -up-|> BaseFrameController
  HotelSearchResultsController o-- IMainMenuCoordinator : coordinator
  HotelSearchResultsController o-- HotelSearchModel : model
  HotelSearchResultsController o-- Booking : reservations
  LoginFrameController -up-|> BaseFrameController
  LoginFrameController o-- ILoginCoordinator : coordinator
  LoginFrameController o-- LoginModel : model
  LoginFrameController +-down- LoginButtonListener
  LoginButtonListener -up-|> ActionListener
  MainMenuFrameController -up-|> BaseFrameController
  MainMenuFrameController o-- IMainMenuCoordinator : coordinator
  RegisterFrameController -up-|> Originator
  RegisterFrameController -up-|> BaseFrameController
  RegisterFrameController o-- ILoginCoordinator : coordinator
  RegisterFrameController o-- RegisterModel : model
  RegisterFrameController +-down- SignUpButtonListener
  SignUpButtonListener -up-|> ActionListener
  WelcomeFrameController -up-|> BaseFrameController
  WelcomeFrameController o-- ILoginCoordinator : coordinator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
